aggiunta banner completo

--- a/index.html
+++ b/index.html
@@ -58,13 +58,20 @@
 
           </div>
             <!--Menu End-->
-
-
         </nav>
         <!--Nav End-->
 
         <!--Banner Start-->
-       <div class="banner"></div>
+       <div class="banner">
+         <div class="layover"></div>
+            <div class="teaser">
+                <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+
+                <h3 class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore non culpa omnis distinctio, voluptam inventore repellendus minima! Necessitatibus.</h3>
+            </div>
+            <img src="img/banner.jpg" alt="Banner">
+               
+       </div>
         <!--Banner End-->
 
 
