--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <h3 class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dolore non culpa omnis distinctio, voluptam inventore repellendus minima! Necessitatibus.</h3>
             </div>
-            <img src="img/banner.jpg" alt="Banner">
+            <img class="obj_fit" src="img/banner.jpg" alt="Banner">
                
        </div>
         <!--Banner End-->
@@ -79,8 +79,79 @@
 
    <!--Header End-->
 
+   <!--Main Start-->
+
+     <main class="margin_common">
+
+        <!--Main title start-->
+        <div class="title">
+            <h2>Leadership</h2>
+
+            <p>Fertenum urna a libero tempus</p>
+        </div>
+        <!--Main title end-->
+
+        <!--Colon container start-->
+
+        <div class="content_container margin_common clearfix">
+
+        <!--Left colon start-->
+            <div class="col left_col">
+              <div class="col_img">
+                <div class="layover"></div>
+
+                <img class="obj_fit" src="img/img-1.jpg" alt="immagine">
+              </div>
+
+              <h4>Lorem</h4>
+
+              <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit ex, dignissimos ea maxime iure deleniti officiis harum eum unde pariatur quas neque obcaecati! Dolores id odit officia eligendi. Dicta?</p>
+            </div>
+        <!--Left colon End-->
 
 
+        <!--Mid colon start-->
+            <div class="col middle_col">
+              <div class="col_img">
+                <div class="layover"></div>
+
+                <img class="obj_fit" src="img/banner-2.jpg" alt="immagine">
+              </div>
+              
+              <h4>Lorem</h4>
+
+              <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit ex, dignissimos ea maxime iure deleniti officiis harum eum unde pariatur quas neque obcaecati! Dolores id odit officia eligendi. Dicta?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim magni iusto amet! Hic, tempore id? Reiciendis fugit velit dolores. Eos facere qui velit. Rerum quis consequuntur ratione magnam dicta ipsa?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dolores quia eius molestias numquam. A dolores expedita quaerat placeat? Nesciunt cupiditate neque molestiae magni aut a rem itaque cum officia!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sapiente ipsum esse? Quia veniam dolorum voluptas necessitatibus voluptates expedita, accusantium debitis id placeat, temporibus quam eligendi sapiente in error nemo.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident debitis voluptatum odit tempore quidem hic dolor, non commodi repellat nisi ipsum facere! Possimus aspernatur a esse tenetur minima. Facilis, delectus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et consequuntur rerum quidem asperiores vitae voluptates omnis dolores, est vel pariatur expedita animi veniam, neque ratione! Enim eveniet temporibus accusamus ratione.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto minima enim error porro sed veniam dicta, totam reprehenderit repellat explicabo possimus similique hic aliquid, recusandae quaerat unde nobis mollitia saepe!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque cupiditate rerum minus velit vero tenetur animi quisquam voluptas inventore. Facere deleniti modi laborum perspiciatis fugiat ad nisi est, doloremque laudantium.
+              </p>
+            </div>
+        <!--mid colon End-->
+
+
+        <!--right colon start-->
+            <div class="col right_col">
+
+              <div class="col_img">
+                <div class="layover"></div>
+
+                <img class="obj_fit" src="img/img-3.jpg" alt="immagine">
+              </div>
+
+              <h4>Lorem</h4>
+
+              <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit ex, dignissimos ea maxime iure deleniti officiis harum eum unde pariatur quas neque obcaecati! Dolores id odit officia eligendi. Dicta?</p>
+            </div>
+        <!--right colon End-->
+
+        </div>
+        <!--Colon container End-->
+
+     </main>
+   <!--Main End-->
 
 
 
