--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
      </main>
    <!--Main End-->
 
+   <!--Footer Start-->
+       <footer>
+         <span>Designed with <span class="heart">&hearts;</span> by Mario</span>
+       </footer>
+   <!--Footer End-->
+
+
+
 
 
 
